# agentic-discord-ai-waifu

./: CLAUDE.md  Dockerfile  main.py  pyproject.toml  ruff.toml
.playwright-mcp/: page-2026-07-04T00-20-31-226Z.yml
app/: constants.py  ui.py
app/agent/: __init__.py  chat.py  proactive.py  tools.py
app/cogs/: chat.py  data.py  diary.py  observer.py  persona.py  proactive.py  profile.py  reminder.py
app/core/: bot.py  command_tree.py  settings.py
app/db/: models.py
app/services/: memory.py  webhook.py
app/utils/: misc.py
migrations/: 0001_initial.py  0002_auto_20260703_2138.py  0003_auto_20260703_2153.py  0004_auto_20260703_2238.py  0005_auto_20260703_2249.py  0006_auto_20260703_2312.py  0007_auto_20260704_2020.py  0008_auto_20260704_2039.py  0009_auto_20260704_2108.py  0010_auto_20260704_2311.py  0011_auto_20260705_0823.py
